# Gradio_Interface

./: README.md  main.py  pyproject.toml
gradio/: company-brochure.ipynb  gradio-ui-day1.ipynb  gradio-ui-day2.ipynb  web_scraper.py
