[project]
name = "gradio-interface"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "gradio>=6.13.0",
    "ipykernel>=7.2.0",
    "lxml>=6.1.0",
    "openai>=2.32.0",
    "requests>=2.33.1",
    "scraper>=0.1.0",
]
